fix: topbar margin top to avoid covering login form

--- a/plugins/Skua/resources/index.css
+++ b/plugins/Skua/resources/index.css
@@ -22,8 +22,6 @@ body {
 body main {
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
 dna-map [marker-symbol] {
