--- a/plugins/Skua/resources/tracking-page.css
+++ b/plugins/Skua/resources/tracking-page.css
@@ -2,6 +2,7 @@
 
 .tracking-page {
     height: 100vh;
+    margin: 0;
 }
 
 .tracking-page dna-map {
